# openai-apps-dinnercaster

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  build-all.mts  deploy.sh  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.node.json
dinner_server_python/: main.py
src/: use-widget-state.ts
src/dinnercaster/: dinnercaster.css  dinnercaster.jsx  index.jsx
