[project]
name = "dinnercaster-mcp"
version = "0.1.0"
description = "Dinnercaster MCP server for meal planning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dinnercaster" }]
license = { text = "MIT" }
dependencies = [
    "fastmcp",
    "uvicorn>=0.23.1; sys_platform != 'emscripten'",
    "starlette",
    "pydantic>=2.0",
]

[project.scripts]
dinnercaster-server = "dinner_server_python.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dinner_server_python"]
